Refactor and update CORDAL framework for Java 25 compatibility
- Removed ConfigurationValidatorTest class as it is no longer needed.
- Updated CacheEventPublisher to use virtual threads for improved performance.
- Modified CacheKeyBuilder to normalize cache keys without converting to lowercase.
- Enhanced InMemoryCacheProvider to handle expired entries more efficiently.
- Made EndpointMetrics fields volatile for thread safety in MetricsCollectionHandler.
- Added methods to PerformanceMetricsRepository for counting metrics by test type and date range.
- Optimized PerformanceMetricsService to use new counting methods for better performance.
- Updated documentation to reflect Java 25 requirements and changes in service start scripts.
- Added Copilot instructions to enforce testing and coding standards.
- Updated Maven configuration to support Java 25 and enable preview features.